--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -34,7 +34,8 @@
             android:id="@+id/btnCreateAccountLogin"
             app:layout_constraintBottom_toBottomOf="@+id/textureView"
             android:layout_marginBottom="40dp" app:layout_constraintEnd_toEndOf="@+id/textureView"
-            android:layout_marginEnd="20dp" android:layout_marginRight="20dp"/>
+            android:layout_marginEnd="20dp" android:layout_marginRight="20dp"
+            android:nextFocusForward="@+id/usernameLogin"/>
     <TextView
             android:text="Orgnzr"
             android:layout_width="wrap_content"
@@ -58,7 +59,8 @@
             android:id="@+id/usernameLogin"
             app:layout_constraintStart_toStartOf="@+id/textureView" android:layout_marginLeft="24dp"
             android:layout_marginStart="24dp" app:layout_constraintTop_toTopOf="@+id/textureView"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            android:nextFocusForward="@+id/userPasswordLogin"/>
 
     <EditText
             android:layout_width="281dp"
@@ -69,7 +71,7 @@
             android:id="@+id/userPasswordLogin"
             app:layout_constraintTop_toBottomOf="@+id/usernameLogin"
             android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="@+id/usernameLogin"
-    />
+            android:nextFocusForward="@+id/btnLogin"/>
     <Button
             android:id="@+id/btnLogin"
             android:text="Login"
@@ -77,5 +79,6 @@
             android:layout_height="48dp"
             app:layout_constraintStart_toStartOf="@+id/textureView" android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="@+id/textureView"
-            android:layout_marginBottom="40dp"/>
+            android:layout_marginBottom="40dp"
+            android:nextFocusForward="@+id/btnCreateAccountLogin"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
