--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="text_color">#9C27B0</color>
+    <color name="timeViewBox">#ECECEC</color>
+    <color name="cardViewBox">#F5FCFF</color>
+    <color name="timeViewBox2">#DBF3FA</color>
+    <color name="cardViewBox2">#F5F5F5</color>
 </resources>
