--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_size">24sp</dimen>
+    <dimen name="dayHeight">64dp</dimen>
+    <dimen name="add_icon_size">15dp</dimen>
+
 </resources>
